<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio_sesion"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#0D47A1"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:backgroundTint="#1565C0"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:backgroundTint="#1565C0"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1565C0"
            android:layout_marginTop="35dp"/>

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registro"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#0D47A1"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_usuarios"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#00897B"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</ScrollView>
