<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_usuario"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#1B5E20"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:backgroundTint="#2E7D32"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/etCorreoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:backgroundTint="#2E7D32"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etPasswordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:backgroundTint="#2E7D32"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_usuario"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2E7D32"
            android:layout_marginTop="35dp"/>

    </LinearLayout>

</ScrollView>